fix: 포스트 게시글 불러오기 수정